# shakki3

./: .gitignore  Attacks.cpp  Attacks.h  Bitboard.cpp  Bitboard.h  BitboardOperations.cpp  BitboardOperations.h  Board.cpp  Board.h  BoardAnalysis.cpp  BoardAnalysis.h  BoardUtils.cpp  BoardUtils.h  CMakeLists.txt  CastlingStatus.cpp  InBetween.cpp  InBetween.h  KingAttacks.cpp  KingAttacks.h  KnightAttacks.cpp  KnightAttacks.h  Move.cpp  Move.h  MyMath.cpp  MyMath.h  PieceColor.cpp  PieceColor.h  PieceSet.cpp  PieceSet.h  Player.cpp  Player.h  Runner.cpp  Runner.h  SlidingPieceRays.cpp  SlidingPieceRays.h  Square.cpp  Square.h  StringUtils.h  UI.cpp  UI.h  (+5 more)
ai/: BoardEvaluator.cpp  BoardEvaluator.h  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h
games/: stockfish_1_first_win.pgn  stockfish_2_first_win.pgn  stockfish_3_first_win.pgn  stockfish_4_first_win.pgn  stockfish_5_first_win.pgn  stockfish_5_win2.pgn  stockfish_6_loss1.pgn
lib/include/catch2/: catch.hpp
lib/include/thc/: thc.cpp  thc.h
lib/lib/cmake/Catch2/: Catch2ConfigVersion.cmake
lib/share/doc/Catch2/: assertions.md  configuration.md  event-listeners.md  other-macros.md  own-main.md  release-notes.md  tutorial.md
lib/share/pkgconfig/: catch2.pc
src/: Attacks.cpp  Attacks.h  Bitboard.cpp  Bitboard.h  BitboardOperations.cpp  BitboardOperations.h  Board.cpp  Board.h  BoardAnalysis.cpp  BoardUtils.cpp  BoardUtils.h  CastlingStatus.cpp  CastlingStatus.h  InBetween.cpp  Move.cpp  Move.h  PieceSet.cpp  PieceSet.h  Player.cpp  Player.h  Runner.cpp  Runner.h  SlidingPieceAttacks_impl.h  Square.cpp  Square.h  StringUtils.cpp  TerminalColors.h  ZobristHash.cpp  ZobristHash.h  mytypes.h
src/ai/: BoardEvaluator.cpp  BoardEvaluator.h  Search.cpp  Search.h  TranspositionTable.cpp
src/ai/eval/: PieceSquareTables.cpp  PieceSquareTables.h
src/ui/: HTTPUI.cpp  HTTPUI.h  UI.cpp  UI.h  UndoException.cpp  UndoException.h
tests/: AI.test.cpp  Bitboard.test.cpp  Board.test.cpp  BoardAnalysis.test.cpp  BoardEvaluator.test.cpp  Inbetween.test.cpp  Move.test.cpp  Square.test.cpp  TestHelpers.cpp  TestHelpers.h  all.cpp
ui/: HTTPUI.cpp  HTTPUI.h  MyWebSocketClient.cpp  MyWebSocketClient.h  WebSocketListener.cpp  WebSocketListener.h  WebSocketSession.cpp  WebSocketSession.h  main.cpp
